objects/Feed_Post_Swarm_Rule__c.object
<CustomObject>
    <description>A rule indicating what users should auto-follow an object based on posts to records of that object type in Chatter.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_or_Unfollow__c</fullName>
        <label>Follow or Unfollow?</label>
        <picklist>
            <picklistValues>
                <fullName>Follow</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unfollow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notify_on_Swarm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify on Swarm?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Text__c</fullName>
        <label>Trigger Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feed_Post_Swarm_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Feed Post Swarm Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FPSR-{0000}</displayFormat>
        <label>Feed Post Swarm Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feed Post Swarm Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>